changed homepage setting to a new domain

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^3.0.0"
   },
-  "homepage": "http://InsafKhamzin.github.io/portfolio"
+  "homepage": "https://insafkhamzin.com"
 }
